--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body{
-  background-color: yellow;
+  background-color: orange;
+  border: 20px black dotted;
+  padding: 10px;
+  margin: 100px 20px;
+  font-family: sans-serif;
 }
